quarkus-petclinic/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quarkus-petclinic
  name: quarkus-petclinic
spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: quarkus-petclinic
