quarkus-petclinic/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-petclinic
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: quarkus-petclinic
    weight: 100
  wildcardPolicy: None
